--- a/boldgrid-theme-framework/assets/scss/boldgrid/blog/_single.scss
+++ b/boldgrid-theme-framework/assets/scss/boldgrid/blog/_single.scss
@@ -1,6 +1,7 @@
 .single {
 	.post {
 		flex-direction: column;
+		flex-wrap: nowrap;
 		.entry-header {
 			.entry-title {
 				margin: 2.4rem 0;
